--- a/styleForLogin.css
+++ b/styleForLogin.css
@@ -1,6 +1,6 @@
 body{
    background-color: green;
-    background-image: url(../htmlpic4.jpg);
+    background-image: url(./htmlpic4.jpg);
     
     text-align: center;
    background-repeat: no-repeat;
