--- a/styleForHomePage.css
+++ b/styleForHomePage.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rosybrown;
+    background-color: black;
     display: grid;
     grid-template-columns: 50% auto;
     grid-template-rows: 20% auto 30%;
@@ -12,26 +12,31 @@ body{
 header , div#first ,div#second ,div#third, div#contact{
     text-align:center;
 }
-header ul{
+nav ul li{
     list-style: none;
+    display: inline-block;
     
 }
-ul li{
-    float: left;
-    width:300px;
-    height:40px;
-    
+nav{
+background-color: tomato;
+width:100%;
+height:40px;
+line-height: 40px;
 }
-ul li:hover{
-    background-color: turquoise;
+nav ul li a{
+    padding:20px;
+    color:black;
+    text-decoration: none;
 }
-#main1{
-    font-size: 60px;
-    text-decoration: blueviolet;
+nav ul li:hover{
+    background-color: beige;
 }
+
+
+
 header {
     grid-area: head;
-    background-color: royalblue;
+    background-color: tomato;
     margin: 10px;
     font-size: 20px;
 
@@ -39,7 +44,7 @@ header {
 
 #first{
 grid-area: personal;
-background-color: skyblue;
+background-color: tomato;
 margin: 10px;
 font-size: 30px;
 
@@ -47,7 +52,7 @@ font-size: 30px;
 
 #second{
     grid-area: hobbies;
-    background-color: teal;
+    background-color: tomato;
     margin: 10px;
     display: inline-block;
 }
@@ -57,6 +62,10 @@ font-size: 30px;
     background-color: tomato;
     margin: 2px;
     font-size: 20px;
+    
+}
+.new1{
+    display: inline-block;
 }
 #contact{
     text-align: center;
@@ -75,12 +84,43 @@ font-size: 30px;
     margin: 10px;
     padding: 10px;
 }
+#interests{
+    grid-area: picture;
+    text-align: center;
+    font-weight: bolder;
+    font-size: 30px;
+    position: relative;
+    bottom:20px;
+    
+}
 #pic1{
     grid-area: picture;
     margin: 10px;
     position: relative;
-    left:100px;
-    
+    bottom: 40px;
+    display:inline-block;
     
 }
-
+#pic1 img{
+    padding:10px;
+}
+span{
+    background-color: tomato;
+}
+/*#prof1
+{
+    position: relative;
+    right:20px;
+}
+#prof2
+{
+    position: relative;
+    left:20px;
+}*/
+.show{
+    display: inline-block;
+}
+#girlpic{
+    position: relative;
+    right: 20px;
+}
